--- a/layouts/partials/equipe/historia-mestre.html
+++ b/layouts/partials/equipe/historia-mestre.html
@@ -76,6 +76,26 @@
         <figcaption>Primeira Turma Kwanza</figcaption>
       </figure>
 
+      <figure>
+        <img src="/img/mestre_jaguara_bj_flor.webp" alt="Mestre Jaguara fazendo Beija-Flor">
+        <figcaption>Primeira Turma Kwanza</figcaption>
+      </figure>
+
+      <figure>
+        <img src="/img/mestre_jaguara_fazendo_mortal.webp" alt="Mestre Jaguara fazendo Mortal">
+        <figcaption>Primeira Turma Kwanza</figcaption>
+      </figure>
+
+      <figure>
+        <img src="/img/mestre_jaguara_mestre_meinha.webp" alt="Mestre Jaguara e Mestre Meinha">
+        <figcaption>Primeira Turma Kwanza</figcaption>
+      </figure>
+
+      <figure>
+        <img src="/img/mestre_jaguara_mestre_russo.webp" alt="Mestre Jaguara e Mestre Russo">
+        <figcaption>Primeira Turma Kwanza</figcaption>
+      </figure>
+
     </div>
   </div>
 </section>
