--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,7 +4,7 @@
 
 <link rel="preload"
       as="image"
-      href="/img/hero/roda-1.webp"
+      href="/img/hero/roda_1.webp"
       fetchpriority="high">
 
 <title>
@@ -29,10 +29,9 @@
 <link rel="stylesheet" href="/css/style.css">
 
 <!-- Favicons -->
-<link rel="icon" href="/favicon/favicon.ico" sizes="any">
+<link rel="icon" href="/favicon/logo-kwanza.ico" sizes="any">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-<link rel="apple-touch-icon" href="/favicon/apple-touch-icon.png">
 
 <!-- Open Graph básico -->
 <meta property="og:type" content="website">
