--- a/layouts/partials/home/eventos.html
+++ b/layouts/partials/home/eventos.html
@@ -49,7 +49,7 @@
                   <a 
                     href="{{ .url }}" 
                     target="_blank" 
-                    rel="noopener"
+                    rel="noopener noreferrer"
                     aria-label="Ver no Instagram"
                     title="Instagram"
                   >
@@ -63,7 +63,7 @@
                   <a 
                     href="{{ .url }}" 
                     target="_blank" 
-                    rel="noopener"
+                    rel="noopener noreferrer"
                     aria-label="Ver site do evento"
                     title="Site"
                   >
