--- a/static/css/components/musica.css
+++ b/static/css/components/musica.css
@@ -47,6 +47,7 @@
 
 .musica-letra-conteudo p {
   margin-bottom: var(--space-sm);
+  white-space: pre-line;
 }
 
 /* Mídia (YouTube ou áudio) - coluna direita */
