--- a/layouts/contatos/list.html
+++ b/layouts/contatos/list.html
@@ -89,7 +89,7 @@
                 <a
                   href="https://maps.google.com/?q={{ .lat }},{{ .lng }}"
                   target="_blank"
-                  rel="noopener">
+                  rel="noopener noreferrer">
                   {{ i18n "view_on_map" }}
                 </a>
               {{ end }}
