--- a/layouts/vem-aprender/list.html
+++ b/layouts/vem-aprender/list.html
@@ -131,7 +131,7 @@
         <ul class="docs-lista">
           {{ range .items }}
           <li class="doc-item">
-            <a href="{{ .arquivo }}" target="_blank" rel="noopener">
+            <a href="{{ .arquivo }}" target="_blank" rel="noopener noreferrer">
               <span class="doc-icone">📄</span>
               <span class="doc-nome">{{ .nome }}</span>
               {{ with .descricao }}
