--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,7 +3,7 @@
 
     <div class="footer-brand">
       <p>
-        ©2025 <strong>Grupo Kwanza</strong><br>
+        Copyright &copy; {{ now.Year }} <strong>Grupo Kwanza</strong><br>
         Capoeira, cultura e formação.
       </p>
     </div>
