--- a/layouts/partials/equipe/historia-mestre.html
+++ b/layouts/partials/equipe/historia-mestre.html
@@ -64,63 +64,63 @@
     <div class="galeria-grid">
 
       <figure>
-        <img src="/img/mestre_jaguara_mestre_zambi_mestre_gato_preto.webp" alt="Mestre Jaguara, Mestre Zambi e Mestre Gato Preto">
-        <figcaption>Mestre Jaguara e Mestre Gato Preto</figcaption>
+        <img src="/img/mestre_jaguara_mestre_zambi_mestre_gato_preto.webp" alt="Mestre Jaguara, Mestre Zambi, Mestre Gato Preto, Mestre Barba e Mestre Polar">
+        <figcaption>Mestre Jaguara, Mestre Zambi, Mestre Gato Preto, Mestre Barba e Mestre Polar</figcaption>
       </figure>
 
       <figure>
         <img src="/img/mestre_jaguara_e_mestre_leopodina.webp" alt="Mestre Jaguara e Mestre Leopoldina">
-        <figcaption>Convivência e troca com Mestre Leopoldina</figcaption>
+        <figcaption>Mestre Jaguara e Mestre Leopoldina</figcaption>
       </figure>
 
       <figure>
-        <img src="/img/mestre_jaguara_mestre_ananias.webp" alt="Mestre Jaguara e Mestre Ananias">
-        <figcaption>Mestre Jaguara ao lado do grande Mestre Ananias</figcaption>
+        <img src="/img/mestre_jaguara_mestre_ananias.webp" alt="Mestre Cinzano, Mestre Jaguara e Mestre Ananias">
+        <figcaption>Mestre Cinzano, Mestre Jaguara e Mestre Ananias</figcaption>
       </figure>
 
       <figure>
         <img src="/img/mestre_jaguara_mestre_zambi.webp" alt="Mestre Jaguara e Mestre Zambi">
-        <figcaption>Mestre Jaguara em sua caminhada com Mestre Zambi</figcaption>
+        <figcaption>Mestre Jaguara e Mestre Zambi</figcaption>
       </figure>
 
       <figure>
         <img src="/img/mestre_jaguara_mestre_zambi_ii.webp" alt="Mestre Jaguara e Mestre Zambi">
-        <figcaption>As rodas de capoeira do Mestre Zambi</figcaption>
+        <figcaption>Mestre Jaguara e Mestre Zambi</figcaption>
       </figure>
 
       <figure>
         <img src="/img/mestre_jaguara_mestre_zambi_iii.webp" alt="Mestre Jaguara e Mestre Zambi">
-        <figcaption>As rodas de capoeira do Mestre Zambi</figcaption>
+        <figcaption>Mestre Jaguara e Mestre Zambi</figcaption>
       </figure>
 
       <figure>
         <img src="/img/mestre_burgues_mestre_jaguara.webp" alt="Mestre Burgues e Mestre Jaguara">
-        <figcaption>Mestre Burgues e Mestre Jaguara quando era integrante do Grupo Muzenza</figcaption>
+        <figcaption>Mestre Burgues e Mestre Jaguara</figcaption>
       </figure>
 
       <figure>
         <img src="/img/primeira_turma_kwanza.webp" alt="Mestre Jaguara e a primeira turma do Grupo Kwanza">
-        <figcaption>Primeira Turma Kwanza</figcaption>
+        <figcaption>Mestre Jaguara e a primeira turma do Grupo Kwanza</figcaption>
       </figure>
 
       <figure>
         <img src="/img/mestre_jaguara_bj_flor.webp" alt="Mestre Jaguara fazendo Beija-Flor">
-        <figcaption>Primeira Turma Kwanza</figcaption>
+        <figcaption>Mestre Jaguara fazendo Beija-Flor</figcaption>
       </figure>
 
       <figure>
-        <img src="/img/mestre_jaguara_fazendo_mortal.webp" alt="Mestre Jaguara fazendo Mortal">
-        <figcaption>Primeira Turma Kwanza</figcaption>
+        <img src="/img/mestre_jaguara_fazendo_mortal.webp" alt="Mestre Jaguara fazendo mortal">
+        <figcaption>Mestre Jaguara fazendo mortal</figcaption>
       </figure>
 
       <figure>
-        <img src="/img/mestre_jaguara_mestre_meinha.webp" alt="Mestre Jaguara e Mestre Meinha">
-        <figcaption>Primeira Turma Kwanza</figcaption>
+        <img src="/img/mestre_jaguara_mestre_meinha.webp" alt="Mestre Cavaco, Mestre Meinha (padrinho do M Jaguara) e Mestre Jaguara">
+        <figcaption>Mestre Cavaco, Mestre Meinha (padrinho do M Jaguara) e Mestre Jaguara</figcaption>
       </figure>
 
       <figure>
         <img src="/img/mestre_jaguara_mestre_russo.webp" alt="Mestre Jaguara e Mestre Russo">
-        <figcaption>Primeira Turma Kwanza</figcaption>
+        <figcaption>Mestre Jaguara e Mestre Russo</figcaption>
       </figure>
 
     </div>
