--- a/static/css/pages/guia.css
+++ b/static/css/pages/guia.css
@@ -104,6 +104,17 @@
   margin-bottom: 0.9rem;
 }
 
+.pagina .pagina-conteudo .container ul,
+.pagina .pagina-conteudo .container ol {
+  margin: 0.8rem 0 1.2rem 1.25rem;
+  padding-left: 0.8rem;
+}
+
+.pagina .pagina-conteudo .container li {
+  margin-bottom: 0.45rem;
+  line-height: 1.6;
+}
+
 .guia-navegacao {
   display: flex;
   flex-direction: column;
